DFINYT-13 add the new plugin for Cke Placeholder library

--- a/test.html
+++ b/test.html
@@ -51,8 +51,12 @@
             </div>
     </div>
 </div>
+
+
 <div class="cke-placeholder-tab upload_file-tab" data-target="upload_file-wrap">Upload file</div>
-<div class="cke-placeholder-fieldset-wrapper" id="upload_file-wrap"><form enctype="multipart/form-data" action="/node/add/article" method="post" id="ckep-file-entity-upload-form" accept-charset="UTF-8"><div><input name="form_build_id" value="form-gJ2qOCnAeChtSI2S2rYuqYTVTmqAhFDgMAx2g4liPDM" type="hidden">
+<div class="cke-placeholder-fieldset-wrapper" id="upload_file-wrap">
+
+<form enctype="multipart/form-data" action="/node/add/article" method="post" id="ckep-file-entity-upload-form" accept-charset="UTF-8"><div><input name="form_build_id" value="form-gJ2qOCnAeChtSI2S2rYuqYTVTmqAhFDgMAx2g4liPDM" type="hidden">
 <input name="form_token" value="s0mck2IB9XJNP_XmsFdyEmmG0B8USRXooZsP3XWM72c" type="hidden">
 <input name="form_id" value="ckep_file_entity_upload_form" type="hidden">
 <fieldset class="cke-placeholder-library-upload cke-library-fieldset form-wrapper" id="cke-placeholder-library-upload"><div class="fieldset-wrapper"><h4>Any changes made here are applied to the file in the database. When ever the file is used, these will be the default texts.</h4>
